--- a/approje/Views/Home/my-profile.cshtml
+++ b/approje/Views/Home/my-profile.cshtml
@@ -33,17 +33,7 @@
 
 </style>
 
-<script>
 
-    function openModal() {
-    var myModal = new bootstrap.Modal(document.getElementById('exampleModalToggleImage'));
-    myModal.show();
-}
-
-
-
-
-</script>
 
 <!-- Start Preloader Area -->
         <div class="preloader-area">
@@ -440,11 +430,11 @@
 
                                         <form action="#" method="post">
                                             <div class="form-group">
-                                                <textarea name="message" class="form-control" placeholder="Write something here..."></textarea>
+                                        <textarea name="message" id="TextAreaPost" class="form-control" placeholder="Write something here..."></textarea>
                                             </div>
                                             <ul class="button-group d-flex justify-content-between align-items-center">
                                                <li class="photo-btn">
-                                            <label for="radioPhoto" class="radio-icon" onclick="openModal()">
+                                                  <label for="radioPhoto" class="radio-icon" data-bs-dismiss="modal" onclick="openModal()">
                                                       <input type="radio" id="radioPhoto" name="mediaType" value="photo" >
                                                       <i class="flaticon-gallery"></i> Photo
                                                   </label>
@@ -459,14 +449,12 @@
                                                     <button type="submit"><i class="flaticon-tag"></i> Tag Friends</button>
                                                 </li>
                                                 <li class="post-btn">
-                                                    <button type="button" data-bs-toggle="modal" onclick="">Post</button>
+                                            <button type="button" onclick="AddPostApi()">Post</button>
                                                 </li>
                                             </ul>
 
                                         </form>
-
-
-                                <div class="modal fade" id="exampleModalToggleImage" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                                <div id="exampleModalToggleImage" style="display:none;">
                                     <div class="modal-dialog modal-dialog-centered">
                                         <div class="modal-content">
                                             <div class="modal-header">
@@ -482,22 +470,11 @@
                                                 </div>
                                             </div>
                                             <div class="modal-footer">
-                                                <button style="" class="btn btn-primary">Save</button>
+                                                <button style="" class="btn btn-primary" data-bs-dismiss="modal">Save</button>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-
-                                <script>
-                                    document.addEventListener("DOMContentLoaded", function () {
-                                        // Modal işlemlerini yapabilirsiniz
-                                        var myModal = new bootstrap.Modal(document.getElementById('exampleModalToggleImage'));
-
-                                        function closeModal() {
-                                            myModal.hide();
-                                        }
-                                    });
-                                </script>
 
 
                                @* <button data-bs-target="#exampleModalToggleImage" data-bs-toggle="modal"><i class="flaticon-gallery"></i> Photo</button>*@
